# conway

./: .gitignore  .ocamlformat  README.md  bun.lockb  conway.opam  conway.opam.locked  dune-project  input.css  package.json  tailwind.config.js
frontend/: engine.js  game-of-life.js  game-of-life.ts  index.js  index.ts  message.js  patterns.js  tsconfig.json  types.d.ts  types.ts  worker.js
frontend/worker/: canvas-drawer.js  canvas-drawer.ts  canvas.js  canvas.ts  engine.js  engine.ts  looper.js  looper.ts  tsconfig.json
lib/: database.ml  dune  htmx.ml
lib/components/: CustomElements.re  Pages.re  dune
tables/: conway.sql
wasmend/: .gitignore  build.zig
wasmend/src/: engine.zig  main.zig
